【软件工程】【数据库表】问题总结，等待修改

--- a/软件工程/火车售票管理系统/数据库/数据库表.md
+++ b/软件工程/火车售票管理系统/数据库/数据库表.md
@@ -4,7 +4,14 @@
 
 
 
-[toc]
+# 问题：
+
+
+
+1. 订单、车票。先产生订单，再产生车票。对应关系再处理一下
+2. 列车座位。考虑如何才能查询到某天哪里到哪里的余票信息。
+
+
 
 
 
@@ -216,12 +223,13 @@
 
 注：因为管理起来过于复杂，出于偷懒，暂时没有把【检票口】写入。
 
-|    字段名称     | 字段类型 | 是否主键 |               是否外键               | 是否为空 |   字段含义   |  备注  |
-| :-------------: | :------: | :------: | :----------------------------------: | :------: | :----------: | :----: |
-|  **ticket_id**  |   int    |    是    |                                      |          |   车票编号   | 自增id |
-| *passenger_id*  |   int    |          |    [乘客信息表](#passenger_info)     |          |   乘客编号   |        |
-|    *seat_id*    |   int    |          |       [座位信息表](#seat_info)       |          |   座位编号   |        |
-| ticket_state_id |   int    |          | [车票状态编码表](#ticket_state_info) |          | 车票状态编号 |        |
+|     字段名称      |  字段类型  | 是否主键 |               是否外键               | 是否为空 |   字段含义   |   备注   |
+| :---------------: | :--------: | :------: | :----------------------------------: | :------: | :----------: | :------: |
+|   **ticket_id**   |    int     |    是    |                                      |          |   车票编号   |  自增id  |
+|  *passenger_id*   |    int     |          |    [乘客信息表](#passenger_info)     |          |   乘客编号   |          |
+|     *seat_id*     |    int     |          |       [座位信息表](#seat_info)       |          |   座位编号   |          |
+| *ticket_state_id* |    int     |          | [车票状态编码表](#ticket_state_info) |          | 车票状态编号 |          |
+|    is_changed     | varchar(1) |          |                                      |          | 是否为改签票 | 是 \| 否 |
 
 
 
@@ -240,23 +248,21 @@
 
 注：【订单信息表】中的改签表示这是一次改签后的订单，【订单状态编码表】中的改签表示这次订单已经被改签了。
 
-|     字段名称     |  字段类型  | 是否主键 |              是否外键               | 是否为空 |    字段含义    |  备注  |
-| :--------------: | :--------: | :------: | :---------------------------------: | :------: | :------------: | :----: |
-|   **order_id**   |    int     |    是    |                                     |          |    订单编号    | 自增id |
-|    *user_id*     |    int     |          |      [用户信息表](#user_info)       |          |   购票人编号   |        |
+|   字段名称   | 字段类型 | 是否主键 |         是否外键         | 是否为空 |      字段含义      |  备注  |
+| :----------: | :------: | :------: | :----------------------: | :------: | :----------------: | :----: |
+| **order_id** |   int    |    是    |                          |          |      订单编号      | 自增id |
+|  *user_id*   |   int    |          | [用户信息表](#user_info) |          | 购票人（用户）编号 |        |
+
+
+
+#### 订单车票关系表
+
+|  字段名称  | 字段类型 | 是否主键 |         是否外键          | 是否为空 | 字段含义 | 备注 |
+| :--------: | :------: | :------: | :-----------------------: | :------: | :------: | :--: |
+| *order_id* |   int    |          | [订单信息表](#order_info) |          | 订单编号 |      |
 |   *ticket_id*    |    int     |          |     [车票信息表](#ticket_info)      |          |    车票编号    |        |
-| *order_state_id* |    int     |          | [订单状态编码表](#order_state_info) |          |  订单状态编号  |        |
-|    is_changed    | varchar(2) |          |                                     |          | 是否为改签订单 |        |
+| order_state |    varchar(3)    |          |                            |          |  订单状态  | 未支付 \| 已取消 \| 已完成 |
 |   create_time    |  datetime  |          |                                     |          |  订单创建时间  |        |
-
-
-
-#### <span id="order_state_info">订单状态编码表 order_state_info</span>
-
-|      字段名称      |  字段类型  | 是否主键 | 是否外键 | 是否为空 |   字段含义   |                     备注                     |
-| :----------------: | :--------: | :------: | :------: | :------: | :----------: | :------------------------------------------: |
-| **order_state_id** |    int     |    是    |          |          | 订单状态编号 |                    自增id                    |
-|  order_state_name  | varchar(5) |          |          |          | 订单状态名称 | 未支付 \| 已支付 \| 已退票 \| 已改签 \| 完成 |
 
 
 
@@ -264,9 +270,9 @@
 
 注：改签后再退票的收费标准有所不同
 
-|    字段名称    | 字段类型 | 是否主键 | 是否外键 | 是否为空 |       字段含义       |     备注     |
-| :------------: | :------: | :------: | :------: | :------: | :------------------: | :----------: |
-| ticket_change  |   int    |          |          |          |       是否改签       | 1：是，0：否 |
-|   hour_ahead   |   int    |          |          |          | 距离发车还有几个小时 |              |
-| fee_percentage |   int    |          |          |          |      退票手续费      |      %       |
+|    字段名称    |  字段类型  | 是否主键 | 是否外键 | 是否为空 |       字段含义       |   备注   |
+| :------------: | :--------: | :------: | :------: | :------: | :------------------: | :------: |
+| ticket_change  | varchar(1) |          |          |          |       是否改签       | 是 \| 否 |
+|   hour_ahead   |    int     |          |          |          | 距离发车还有几个小时 |          |
+| fee_percentage |    int     |          |          |          |      退票手续费      |    %     |
 
