--- a/Android/lab11/2019212212236_苏桐渤.md
+++ b/Android/lab11/2019212212236_苏桐渤.md
@@ -39,7 +39,149 @@
 
 
 
+### 一、创建显示歌曲列表 ListView 相关的控件
 
+
+
+- 自定义控件-布局
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="40dp">
+
+    <TextView
+        android:id="@+id/music_item_text_view_id"
+        android:layout_width="20dp"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/music_item_text_view_title"
+        android:layout_width="150dp"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/music_item_text_view_artist"
+        android:layout_width="150dp"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/music_item_text_view_duration"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
+```
+
+- 自定义类，关联每条音乐的信息
+
+```java
+public class MusicItem {
+    private String id;
+    private String title;
+    private String artist;
+    private String duration;
+    private String path;
+    
+    ...
+}
+```
+
+- 适配器
+
+```java
+public class MusicAdapter extends ArrayAdapter<MusicItem> {
+
+    private int resourceId;
+
+    public MusicAdapter(@NonNull Context context, int resource, @NonNull List<MusicItem> objects) {
+        super(context, resource, objects);
+        this.resourceId = resource;
+    }
+    
+    ...
+}
+```
+
+- listview
+
+```java
+musicAdapter = new MusicAdapter(MainActivity.this, R.layout.music_item, this.list);
+listView = (ListView) findViewById(R.id.main_list_view);
+listView.setAdapter(musicAdapter);
+```
+
+
+
+### 二、获取手机中的音频文件
+
+- 申请权限
+
+```xml
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+```
+
+- 读取音频文件
+
+```java
+Cursor cursor = getContentResolver().query(MediaStore.Audio.Media.EXTERNAL_CONTENT_URI, null, null, null, MediaStore.Audio.Media.DEFAULT_SORT_ORDER);
+```
+
+- 加载到listview中
+
+```java
+list.add(new MusicItem(String.valueOf(++id), title, artist, getLength(duration), path));
+```
+
+
+
+### 三、点击事件：完成音乐的播放和暂停
+
+- 播放、暂停、上一首、终止、下一首
+
+```java
+ public void onClick(View view) {
+     switch (view.getId()) {
+         case R.id.main_button_play:
+             videoPlay();
+             break;
+         case R.id.main_button_pause:
+         case R.id.main_button_stop:
+             if (videoView.isPlaying()) {
+                 videoView.pause(); // 暂停播放
+             }
+             break;
+         case R.id.main_button_prev:
+             if (current > 0) {
+                 videoView.setVideoPath(list.get(--current).getPath());
+                 videoPlay();
+             }
+             break;
+         case R.id.main_button_next:
+             if (current < list.size() - 1) {
+                 videoView.setVideoPath(list.get(++current).getPath());
+                 videoPlay();
+             }
+             break;
+     }
+ }
+```
+
+- 点击listview 中的音乐，实现跳转播放
+
+```java
+listView.setOnItemClickListener(new AdapterView.OnItemClickListener() {
+    @Override
+    public void onItemClick(AdapterView<?> adapterView, View view, int i, long l) {
+        current = i;
+        videoView.setVideoPath(list.get(current).getPath());
+        show.setText(list.get(i).getTitle());
+        videoPlay();
+    }
+});
+```
 
 
 
@@ -47,5 +189,21 @@
 
 
 
+- 权限问题
 
+```xml
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+```
 
+```java
+if (grantResults.length > 0 && grantResults[0] == PackageManager.PERMISSION_GRANTED) {
+    init();
+} else {
+    Toast.makeText(this, "拒绝权限将无法使用程序", Toast.LENGTH_SHORT).show();
+    finish();
+}
+```
+
+- 顺序问题
+
+要先获得读取文件的权限，再读取文件加载listview，再从列表中获取音乐进行播放
