补充异常界面

--- a/Android/lab06/2019212212236_苏桐渤.md
+++ b/Android/lab06/2019212212236_苏桐渤.md
@@ -34,7 +34,8 @@
     <ImageView
         android:id="@+id/fruit_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_conten
+                               t" />
 
     <TextView
         android:id="@+id/fruit_english_name"
@@ -117,25 +118,7 @@ public class FruitAdapter extends ArrayAdapter<Fruit> {
 
     @Override
     public View getView(int position, View convertView, ViewGroup parent) {
-        Fruit fruit = getItem(position);
-
-        View view;
-        ViewHolder viewHolder;
-
-        if (convertView == null) {
-            view = LayoutInflater.from(getContext()).inflate(resourceId, parent, false);
-            viewHolder = new ViewHolder(view.findViewById(R.id.fruit_image), view.findViewById(R.id.fruit_english_name), view.findViewById(R.id.fruit_chinese_name));
-            view.setTag(viewHolder);
-        } else {
-            view = convertView;
-            viewHolder = (ViewHolder) view.getTag();
-        }
-
-        viewHolder.fruitImage.setImageResource(fruit.getImageId());
-        viewHolder.fruitEnglishName.setText(fruit.getEnglishName());
-        viewHolder.fruitChineseName.setText(fruit.getChineseName());
-
-        return view;
+       co
     }
 
     class ViewHolder {
@@ -343,7 +326,7 @@ public void search(String text) {
 <img src="http://blog.lllllan.cn/usr/uploads/2021/10/3663940067.png" width=200>
 <img src="http://blog.lllllan.cn/usr/uploads/2021/10/3857681085.png" width=200>
 <img src="http://blog.lllllan.cn/usr/uploads/2021/10/1230777497.png" width=200>
-  
+
 #### 问题分析与总结
 
 一、图片、中英文名点击之后，出现名字错误、点不到图片的情况
