--- a/Android/lab06/2019212212236_苏桐渤.md
+++ b/Android/lab06/2019212212236_苏桐渤.md
@@ -118,7 +118,25 @@ public class FruitAdapter extends ArrayAdapter<Fruit> {
 
     @Override
     public View getView(int position, View convertView, ViewGroup parent) {
-       co
+       Fruit fruit = getItem(position);
+
+        View view;
+        ViewHolder viewHolder;
+
+        if (convertView == null) {
+            view = LayoutInflater.from(getContext()).inflate(resourceId, parent, false);
+            viewHolder = new ViewHolder(view.findViewById(R.id.fruit_image), view.findViewById(R.id.fruit_english_name), view.findViewById(R.id.fruit_chinese_name));
+            view.setTag(viewHolder);
+        } else {
+            view = convertView;
+            viewHolder = (ViewHolder) view.getTag();
+        }
+
+        viewHolder.fruitImage.setImageResource(fruit.getImageId());
+        viewHolder.fruitEnglishName.setText(fruit.getEnglishName());
+        viewHolder.fruitChineseName.setText(fruit.getChineseName());
+
+        return view;
     }
 
     class ViewHolder {
