修改数据库表

--- a/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
+++ b/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
@@ -81,21 +81,22 @@
 
 # 火车相关
 
-- 火车信息表-火车：实指一列火车实体。
-- 火车往返时刻表：规定该列火车每天应该在什么时间从哪里发往哪里。
+- 火车信息表-火车：实指一列火车实体。 
 - 火车运行时刻表：指该列火车在某天运行的具体行为。
 
 
 
 #### <span id="trains">火车信息表 trains</span>
 
+注：每列火车都有固定的往返时刻表
+
 |       字段名称        |  字段类型   | 是否主键 |         是否外键          | 是否为空 |   字段含义   |          备注          |
 | :-------------------: | :---------: | :------: | :-----------------------: | :------: | :----------: | :--------------------: |
 |     **train_id**      |     int     |    是    |                           |          |   火车编码   |                        |
 |      train_type       |     int     |          |                           |          |   火车类型   |                        |
 |      train_name       | varchar(20) |          |                           |          |   火车名称   |       eg: G1818        |
-|  *departure_station*  |     int     |          | [火车站编码表](#stations) |          |    起始站    | 首程起始站、返程目的站 |
-| *destination_station* |     int     |          | [火车站编码表](#stations) |          |    目的站    | 首程目的站、返程起始站 |
+|  *departure_station*  |     int     |          | [火车站编码表](#stations) |          |  起始站编码  | 首程起始站、返程目的站 |
+| *destination_station* |     int     |          | [火车站编码表](#stations) |          |  目的站编码  | 首程目的站、返程起始站 |
 |    departure_time     |  datetime   |          |                           |          | 首程出发时间 |                        |
 |      arrive_time      |  datetime   |          |                           |          | 首程到达时间 |                        |
 |  back_departure_time  |  datetime   |          |                           |          | 返程出发时间 |                        |
@@ -105,64 +106,81 @@
 
 #### <span id="train_running">火车运行表 train_running</span>
 
-|       字段名称        | 字段类型 | 是否主键 |         是否外键          | 是否为空 |   字段含义   | 备注 |
-| :-------------------: | :------: | :------: | :-----------------------: | :------: | :----------: | :--: |
-| **train_running_id**  |   int    |    是    |                           |          | 火车运行编码 |      |
-|      *train_id*       |   int    |          |   [火车信息表](#trains)   |          |   火车编码   |      |
-|  *departure_station*  |   int    |          | [火车站编码表](#stations) |          |    起始站    |      |
-| *destination_station* |   int    |          | [火车站编码表](#stations) |          |    目的站    |      |
-|    departure_time     | datetime |          |                           |    是    | 规定发车时间 |      |
-|      arrive_time      | datetime |          |                           |    是    | 规定到达时间 |      |
-| actual_departure_time | datetime |          |                           |    是    | 实际发车时间 |      |
-|  actual_arrive_time   | datetime |          |                           |    是    | 实际到达时间 |      |
-|      has_started      |   int    |          |                           |          | 是否已经发车 |      |
-|      has_arrived      |   int    |          |                           |          | 是否已经到达 |      |
+注：火车的一次运行，好比往返时刻表中一个方向的实例化，是单程的。
+
+
+
+单次运行有如下状态：
+
+- 是否取消：取消了就是不发车了，没有晚点的说法。
+- 是否发车/到达：表中有规定发车/到达时间和实际发车/到达时间。
+    - 实际发车时间为空时，表示未发车；不为空表示已发车；时间与规定发车时间不符的，经计算得出提早发车或晚点。
+    - 实际到达时间为空时，表示未到达；不为空表示已到达；时间与规定到达时间不符的，经计算得出提早达到或晚点。
+
+|       字段名称        | 字段类型 | 是否主键 |         是否外键          | 是否为空 |   字段含义   |           备注           |
+| :-------------------: | :------: | :------: | :-----------------------: | :------: | :----------: | :----------------------: |
+| **train_running_id**  |   int    |    是    |                           |          | 火车运行编码 |                          |
+|      *train_id*       |   int    |          |   [火车信息表](#trains)   |          |   火车编码   |                          |
+|  *departure_station*  |   int    |          | [火车站编码表](#stations) |          |  起始站编码  |                          |
+| *destination_station* |   int    |          | [火车站编码表](#stations) |          |  目的站编码  |                          |
+|    departure_time     | datetime |          |                           |          | 规定发车时间 |                          |
+|      arrive_time      | datetime |          |                           |          | 规定到达时间 |                          |
+| actual_departure_time | datetime |          |                           |    是    | 实际发车时间 | 可为空，为空时表示未发车 |
+|  actual_arrive_time   | datetime |          |                           |    是    | 实际到达时间 | 课为空，为空时表示未到达 |
+|        cancel         |   int    |          |                           |          |   是否取消   |          01表示          |
+
+解释：对比于【火车信息表】，有部分字段重复：
+
+- 起始站点、目的站点的重复：
+    - 【火车信息表】是双向意义上的信息，它的起始站点是首程的起始站，也是返程的目的站。
+    - 【火车运行表】是单程的，因此再次列出起始站和目的站的信息。
+- 规定出发时间、规定到达时间的重复：
+    - 与上同理。
+    - 【火车信息表】更像一个模板，规定了以后的列车的基本信息；其中发车和到达时间是可以修改的。
+        而【火车运行表】是一条条记录，执行完的列车信息是不会改变的。
+        所以即使后来从规范模板中修改了火车的发车/到达时间，已经执行完的火车的各项信息，是不应该被修改的。
 
 
 
 # 车厢座位相关
 
+注：【车厢信息表】【座位模板】是每列火车拥有的固定的信息，无论哪次运行，都应该遵守的。座位信息表则是某列火车某一次具体运行中的每一个座位的信息。
 
 
-#### <span id="cabins_template">车厢模板 cabins_template</span>
+
+#### <span id="cabins">车厢信息表 cabins</span>
 
 注：每次发车的车厢信息规范模板
 
 |   字段名称   | 字段类型 | 是否主键 |       是否外键        | 是否为空 | 字段含义 |                             备注                             |
 | :----------: | :------: | :------: | :-------------------: | :------: | :------: | :----------------------------------------------------------: |
-| **cabin_id** |   int    |    是    |                       |          | 车厢编码 |                            自增id                            |
+| **cabin_id** |   int    |    是    |                       |          | 车厢编码 |                                                              |
 |  *train_id*  |   int    |          | [火车信息表](#trains) |          | 火车编码 |                                                              |
 |  cabin_type  |   int    |          |                       |          | 车厢类型 | 一等座车厢 \| 硬座车厢 \| 等<br>规定了该车厢内的所有座位类型 |
 | cabin_number |   int    |          |                       |          |  车厢号  |                                                              |
 
 
 
-#### <span id="seats_template">座位模板 seats_template</span>
+#### <span id="seat_template">座位模板 seat_template</span>
 
-|       字段名称       |  字段类型  | 是否主键 |           是否外键           | 是否为空 |   字段含义   |   备注    |
-| :------------------: | :--------: | :------: | :--------------------------: | :------: | :----------: | :-------: |
-| **seat_template_id** |    int     |    是    |                              |          | 座位模板编码 |           |
-|      *train_id*      |    int     |          |    [火车信息表](#trains)     |          |   火车编码   |           |
-|      *cabin_id*      |    int     |          | [座位模板](#cabins_template) |          |   车厢编码   |           |
-|    seat_position     | varchar(5) |          |                              |          |    座位号    | eg: 16排A |
-|      adult_fare      |   float    |          |                              |          |   成人票价   |           |
-|     student_fare     |   float    |          |                              |          |   学生票价   |           |
-|      child_fare      |   float    |          |                              |          |   儿童票价   |           |
+|       字段名称       |  字段类型  | 是否主键 |       是否外键        | 是否为空 |   字段含义   |   备注    |
+| :------------------: | :--------: | :------: | :-------------------: | :------: | :----------: | :-------: |
+| **seat_template_id** |    int     |    是    |                       |          | 座位模板编码 |           |
+|      *cabin_id*      |    int     |          | [车厢信息表](#cabins) |          |   车厢编码   |           |
+|    seat_position     | varchar(5) |          |                       |          |    座位号    | eg: 16排A |
+|      adult_fare      |   float    |          |                       |          |   成人票价   |           |
+|     student_fare     |   float    |          |                       |          |   学生票价   |           |
+|      child_fare      |   float    |          |                       |          |   儿童票价   |           |
 
 
 
 #### <span id="seats">座位信息表 seats</span>
 
-|      字段名称      |  字段类型  | 是否主键 |           是否外键           | 是否为空 |   字段含义   | 备注 |
-| :----------------: | :--------: | :------: | :--------------------------: | :------: | :----------: | :--: |
-|    **seat_id**     |    int     |    是    |                              |          |   座位编码   |      |
-| *seat_template_id* |    int     |          | [座位模板](#seats_template)  |          | 座位模板编码 |      |
-|     *train_id*     |    int     |          |    [火车信息表](#trains)     |          |   火车编码   |      |
-|     *cabin_id*     |    int     |          | [座位模板](#cabins_template) |          |   车厢编码   |      |
-|   seat_position    | varchar(5) |          |                              |          |    座位号    |      |
-|     adult_fare     |   float    |          |                              |          |   成人票价   |      |
-|    student_fare    |   float    |          |                              |          |   学生票价   |      |
-|     child_fare     |   float    |          |                              |          |   儿童票价   |      |
+|      字段名称      | 字段类型 | 是否主键 |           是否外键           | 是否为空 |   字段含义   | 备注 |
+| :----------------: | :------: | :------: | :--------------------------: | :------: | :----------: | :--: |
+|    **seat_id**     |   int    |    是    |                              |          |   座位编码   |      |
+| *train_running_id* |   int    |          | [火车运行表](#train_running) |          |   火车编码   |      |
+| *seat_template_id* |   int    |          |  [座位模板](#seat_template)  |          | 座位模板编码 |      |
 
 
 
@@ -183,9 +201,8 @@
 
 #### <span id="order_details">订单详细 order_details</span>
 
-考虑到一次订单可能为多个人一起买票，但是订单的改签和取消，可能发生在整个订单或个别乘客身上。
-
-所以改签和取消的状态绑定到了订单详细上。
+注：考虑到一次订单可能为多个人一起买票，但是订单的改签和取消，可能发生在整个订单或个别乘客身上。
+		所以改签和取消的状态绑定到了订单详细上。
 
 |       字段名称       | 字段类型 | 是否主键 |         是否外键          | 是否为空 |     字段含义     |           备注           |
 | :------------------: | :------: | :------: | :-----------------------: | :------: | :--------------: | :----------------------: |
