添加部分sql语句

--- a/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
+++ b/软件工程/火车售票管理系统/数据库/数据库表-改2.0.md
@@ -8,41 +8,61 @@
 
 #### <span id="users">用户信息表 users</span>
 
-|    字段名称    |  字段类型   | 是否主键 | 是否外键 | 是否为空 | 字段含义 |                备注                 |
-| :------------: | :---------: | :------: | :------: | :------: | :------: | :---------------------------------: |
-|  **user_id**   |     int     |    是    |          |          | 用户编码 |                                     |
-| user_telephone | varchar(11) |          |          |          | 用户手机 |                                     |
-| user_password  | varchar(20) |          |          |          | 用户密码 |              长度6-18               |
-|   user_name    | varchar(10) |          |          |          | 用户昵称 |       长度1-10，避免特殊字符        |
-|   user_type    | varchar(4)  |          |          |          | 用户类型 | 普通用户 \| VIP用户 \| 管理员 \| 等 |
-|   user_state   | varchar(2)  |          |          |          | 用户状态 |          正常、冻结、注销           |
-|  create_time   |    date     |          |          |          | 创建时间 |             yyyy-mm-dd              |
+|  字段名称   |  字段类型   | 是否主键 | 是否外键 | 是否为空 | 字段含义 |          备注          |
+| :---------: | :---------: | :------: | :------: | :------: | :------: | :--------------------: |
+|   **id**    |     int     |    是    |          |          | 用户编码 |                        |
+|    name     | varchar(10) |          |          |          | 用户昵称 |                        |
+|    type     |   tinyint   |          |          |          | 用户类型 |    0-用户, 1-管理员    |
+|  telephone  | varchar(11) |          |          |          | 联系方式 |                        |
+|  password   | varchar(20) |          |          |          | 用户密码 |                        |
+|    state    |   tinyint   |          |          |          | 用户状态 | 0-正常, 1-冻结, 2-注销 |
+| create_time |    date     |          |          |          | 创建时间 |       yyyy-mm-dd       |
+
+```sql
+CREATE TABLE users (
+	`id` INT UNSIGNED AUTO_INCREMENT,
+	`name` VARCHAR(10) NOT NULL,
+	`type` tinyint NOT NULL COMMENT '0-用户, 1-管理员',
+	`telephone` VARCHAR(11) NOT NULL,
+	`password` VARCHAR(20) NOT NULL,
+	`state` tinyint NOT NULL COMMENT '0-正常, 1-冻结, 2-注销',
+	`create_time` DATE NOT NULL,
+	PRIMARY KEY (`id`)
+) ENGINE = InnoDB CHARSET = utf8;
+```
+
+```sql
+insert users VALUES(null, "test01", 0, "12345678911", "admin", 0, NOW());
+```
 
 
 
 #### <span id="passengers">乘客信息表 passengers</span>
 
-注：出于偷懒，所有人都必须用居民身份证
+| 字段名称  |  字段类型   | 是否主键 | 是否外键 | 是否为空 | 字段含义 |                             备注                             |
+| :-------: | :---------: | :------: | :------: | :------: | :------: | :----------------------------------------------------------: |
+|  **id**   |     int     |    是    |          |          | 乘客编码 |                                                              |
+|   name    | varchar(20) |          |          |          | 乘客姓名 |                                                              |
+| telephone | varchar(11) |          |          |          | 联系方式 |                                                              |
+|  ID_type  | varchar(15) |          |          |          | 证件类型 | 中华人民共和国居民身份证<br>港澳居民来往内地通行证<br>台湾居民来往大陆通行证 |
+|   ID_no   | varchar(30) |          |          |          | 证件号码 |                                                              |
+|   type    | varchar(5)  |          |          |          | 乘客类型 |               普通 \| 学生 \| 儿童 \| 残疾军人               |
 
-|       字段名称        |  字段类型   | 是否主键 | 是否外键 | 是否为空 |  字段含义  |            备注            |
-| :-------------------: | :---------: | :------: | :------: | :------: | :--------: | :------------------------: |
-|   **passenger_id**    |     int     |    是    |          |          |  乘客编码  |                            |
-|    passenger_state    | varchar(2)  |          |          |          |  乘客状态  | 正常 \| 限制 \| 禁止 \| 等 |
-| passenger_resident_id | varchar(20) |          |          |          | 居民身份证 |                            |
-|    passenger_type     | varchar(20) |          |          |          |  乘客类型  | 成人 \| 学生 \| 儿童 \| 等 |
-|    passenger_name     | varchar(20) |          |          |          |  乘客姓名  |                            |
-|      profession       | varchar(20) |          |          |    是    |  乘客职业  |                            |
+```sql
+CREATE TABLE passengers(
+	`id` INT UNSIGNED AUTO_INCREMENT,
+    `name` VARCHAR(10) NOT NULL,
+    `telephone` VARCHAR(11) NOT NULL,
+    `ID_type` VARCHAR(15) NOT NULL,
+    `ID_no` VARCHAR(30) NOT NULL,
+    `type` VARCHAR(5) NOT NULL,
+    PRIMARY KEY ( `id` )
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+```
 
-
-
-#### <span id="users_to_passengers">用户-乘客关系表 users_to_passengers</span>
-
-注：用户和乘客是多对多的关系。一个用户可以为多个乘客购买车票，每个乘客也可以在不同的用户上进行购买。
-
-|    字段名称    | 字段类型 | 是否主键 |         是否外键          | 是否为空 | 字段含义 | 备注 |
-| :------------: | :------: | :------: | :-----------------------: | :------: | :------: | :--: |
-|   *user_id*    |   int    |          |   [用户信息表](#users)    |          | 用户编码 |      |
-| *passenger_id* |   int    |          | [乘客信息表](#passengers) |          | 乘客编码 |      |
+```sql
+INSERT passengers VALUES(NULL, "苏桐渤", "12345678911", "中华人民共和国居民身份证", "1234***********789", "学生");
+```
 
 
 
@@ -52,10 +72,22 @@
 
 #### <span id="provinces">省份编码表 provinces</span>
 
-|    字段名称     |  字段类型   | 是否主键 | 是否外键 | 是否为空 | 字段含义 | 备注 |
-| :-------------: | :---------: | :------: | :------: | :------: | :------: | :--: |
-| **province_id** |     int     |    是    |          |          | 省份编码 |      |
-|  province_name  | varchar(10) |          |          |          | 省份名称 |      |
+| 字段名称 |  字段类型   | 是否主键 | 是否外键 | 是否为空 | 字段含义 | 备注 |
+| :------: | :---------: | :------: | :------: | :------: | :------: | :--: |
+|  **id**  |     int     |    是    |          |          | 省份编码 |      |
+|   name   | varchar(10) |          |          |          | 省份名称 |      |
+
+```sql
+CREATE TABLE provinces(
+    `id` INT UNSIGNED AUTO_INCREMENT, 
+    `name` VARCHAR(10) NOT NULL,
+    PRIMARY KEY ( `id` )
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+```
+
+```sql
+INSERT provinces VALUES(NULL, "浙江省");
+```
 
 
 
@@ -63,19 +95,62 @@
 
 |   字段名称    |  字段类型   | 是否主键 |         是否外键         | 是否为空 |   字段含义   | 备注 |
 | :-----------: | :---------: | :------: | :----------------------: | :------: | :----------: | :--: |
-|  **city_id**  |     int     |    是    |                          |          |   城市编码   |      |
+|    **id**     |     int     |    是    |                          |          |   城市编码   |      |
 | *province_id* |     int     |          | [省份编码表](#provinces) |          | 所在省份编码 |      |
-|   city_name   | varchar(20) |          |                          |          |   城市名称   |      |
+|     name      | varchar(20) |          |                          |          |   城市名称   |      |
+
+```sql
+CREATE TABLE cities(
+    `id` INT UNSIGNED AUTO_INCREMENT, 
+    `province_id` INT UNSIGNED NOT NULL,
+    `name` VARCHAR(20) NOT NULL,	
+    PRIMARY KEY ( `id` ),
+    FOREIGN KEY ( `province_id` ) REFERENCES provinces( `id` ) 
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+```
+
+```sql
+INSERT cities VALUES(NULL, 1, "杭州市"); 
+```
+
+```sql
+SELECT ct.id AS id, pv.name AS province, ct.name AS city
+FROM provinces pv, cities ct
+WHERE pv.id = ct.province_id
+ORDER BY province;
+```
 
 
 
 #### <span id="stations">火车站编码表 stations</span>
 
-|    字段名称    |  字段类型   | 是否主键 |       是否外键        | 是否为空 |   字段含义   | 备注 |
-| :------------: | :---------: | :------: | :-------------------: | :------: | :----------: | :--: |
-| **station_id** |     int     |    是    |                       |          |  火车站编码  |      |
-|   *city_id*    |     int     |          | [城市编码表](#cities) |          | 所在城市编码 |      |
-|  station_name  | varchar(20) |          |                       |          |  火车站名称  |      |
+|   字段名称   |  字段类型   | 是否主键 |       是否外键        | 是否为空 |   字段含义   | 备注 |
+| :----------: | :---------: | :------: | :-------------------: | :------: | :----------: | :--: |
+|    **id**    |     int     |    是    |                       |          |  火车站编码  |      |
+|  *city_id*   |     int     |          | [城市编码表](#cities) |          | 所在城市编码 |      |
+| station_name | varchar(20) |          |                       |          |  火车站名称  |      |
+
+```sql
+CREATE TABLE stations(
+    `id` INT UNSIGNED AUTO_INCREMENT, 
+    `city_id` INT UNSIGNED NOT NULL,
+    `name` VARCHAR(20) NOT NULL,	
+    PRIMARY KEY ( `id` ),
+    FOREIGN KEY ( `city_id` ) REFERENCES cities( `id` ) 
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+```
+
+```sql
+INSERT stations VALUES(null, 1, "杭州东站");
+```
+
+```sql
+SELECT st.id AS id, pv.name AS province, ct.name AS city, st.name AS station
+FROM provinces pv, cities ct, stations st
+WHERE pv.id = ct.province_id
+	AND ct.id = st.city_id
+ORDER BY province, city;
+```
 
 
 
@@ -101,6 +176,13 @@
 |      arrive_time      |  datetime   |          |                           |          | 首程到达时间 |                        |
 |  back_departure_time  |  datetime   |          |                           |          | 返程出发时间 |                        |
 |   back_arrive_time    |  datetime   |          |                           |          | 返程到达时间 |                        |
+
+```sql
+CREATE TABLE trains(
+    `id` INT UNSIGNED AUTO_INCREMENT,  
+    PRIMARY KEY ( `id` ),
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+```
 
 
 
@@ -198,6 +280,10 @@
 |   has_paid   |   int    |          |                      |          |    是否已经付款    |      |
 
 
+
+！！订单是一起取消的
+
+！！可单独改签和退票
 
 #### <span id="order_details">订单详细 order_details</span>
 
